--- a/app/Resources/views/user/addDayOff.html.twig
+++ b/app/Resources/views/user/addDayOff.html.twig
@@ -11,7 +11,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                     <h2>Add Day Off</h2>
                     <hr class="colorgraph">
-                    <form action="{{ path('addDayOff') }}" method="post">l
+                    <form action="{{ path('add_free_days') }}" method="post">l
                         <div class='col-md-5'>
                             <div class="form-group">
                                 <div class='input-group date' id='datetimepicker6'>
