--- a/app/Resources/views/user/login.html.twig
+++ b/app/Resources/views/user/login.html.twig
@@ -2,33 +2,35 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-    <div class="container top-item">
-        <div class="row" style="margin-top:20px">
-            <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                <h2>Please Sign In</h2>
-                <hr class="colorgraph">
-                <form action="{{ path('login') }}" method="post">
-                    {% if error %}
-                        <div class="form-group alert-danger">{{ error.message | replace({"Bad credentials." : "Invalid username or password!"}) }}</div>
-                    {% endif %}
-                    <div class="form-group">
-                        <label for="username">Username or email:</label>
-                        <input type="text" id="username" class="form-control input-lg" name="_username"
-                               value="{{ last_username }}"/>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="password">Password:</label>
-                        <input type="password" class="form-control input-lg" id="password" name="_password"/>
-                    </div>
-                    <input type="hidden" name="_target_path" value="/admin"/>
+    <div id="page-wrapper" style=" min-height: 1043px;">
+        <div class="container top-item">
+            <div class="row" style="margin-top:20px">
+                <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+                    <h2>Please Sign In</h2>
                     <hr class="colorgraph">
-                    <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-6">
-                            <button type="submit" class="btn btn-lg btn-success btn-block">login</button>
+                    <form action="{{ path('login') }}" method="post">
+                        {% if error %}
+                            <div class="form-group alert-danger">{{ error.message | replace({"Bad credentials." : "Invalid username or password!"}) }}</div>
+                        {% endif %}
+                        <div class="form-group">
+                            <label for="username">Username or email:</label>
+                            <input type="text" id="username" class="form-control input-lg" name="_username"
+                                   value="{{ last_username }}"/>
                         </div>
-                    </div>
-                </form>
+
+                        <div class="form-group">
+                            <label for="password">Password:</label>
+                            <input type="password" class="form-control input-lg" id="password" name="_password"/>
+                        </div>
+                        <input type="hidden" name="_target_path" value="/admin"/>
+                        <hr class="colorgraph">
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <button type="submit" class="btn btn-lg btn-success btn-block">login</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
