--- a/app/Resources/views/user/registration.html.twig
+++ b/app/Resources/views/user/registration.html.twig
@@ -2,6 +2,7 @@
 {% block title %}Registration{% endblock %}
 
 {% block content %}
+<div id="page-wrapper" style=" min-height: 1043px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
@@ -24,13 +25,14 @@
                         <button type="submit" class="btn btn-primary btn-block btn-lg" tabindex="8">Register
                         </button>
                     </div>
-                    <div class="col-xs-12 col-md-6"><a href="../login" class="btn btn-success btn-block btn-lg">Sign
-                                                                                                                In</a>
+                    <div class="col-xs-12 col-md-6">
+                        <a href="../login" class="btn btn-success btn-block btn-lg">Sign In</a>
                     </div>
                 </div>
                 {{ form_end(form) }}
             </div>
         </div>
     </div>
+</div>
 
 {% endblock %}
