--- a/app/Resources/views/admin/users.html.twig
+++ b/app/Resources/views/admin/users.html.twig
@@ -11,7 +11,12 @@
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                     <h2>Users</h2>
                     <div class="panel-body">
-                        <form action="{{ path('numberOfDaysOff') }}"
+                        {% for message in app.flashes('warning') %}
+                            <div class="alert alert-warning">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                        <form action="{{ path('number_of_days_off') }}"
                               method="post">
                             <div class="form-group">
                                 <select id="select" name="name" style="width: 255px;">
@@ -38,36 +43,38 @@
                             </div>
                             <hr class="colorgraph">
                         </form>
-                        <div class="table-responsive">
-                            <table class="table table-bordered table-hover table-striped">
-                                <thead>
-                                <tr>
+                        {% if(users is not empty) %}
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover table-striped">
+                                    <thead>
+                                    <tr>
 
-                                    <th>Id</th>
-                                    <th>Firstname</th>
-                                    <th>Lastname</th>
-                                    <th>Number of DaysOff Per Year</th>
+                                        <th>Id</th>
+                                        <th>Firstname</th>
+                                        <th>Lastname</th>
+                                        <th>Number of DaysOff Per Year</th>
 
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for user in users %}
-                                    {% if(user.firstname!='admin') %}
-                                        <tr id="{{ user.id }}">
-                                            <td>{{ user.id }}</td>
-                                            <td>{{ user.firstname }}</td>
-                                            <td>{{ user.lastname }}</td>
-                                            {% for holiday in holidays %}
-                                                {% if holiday.userId==user.id %}
-                                                    <td>{{ holiday.numberOfDaysOff }}</td>
-                                                {% endif %}
-                                            {% endfor %}
-                                        </tr>
-                                    {% endif %}
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for user in users %}
+                                        {% if(user.firstname!='admin') %}
+                                            <tr id="{{ user.id }}">
+                                                <td>{{ user.id }}</td>
+                                                <td>{{ user.firstname }}</td>
+                                                <td>{{ user.lastname }}</td>
+                                                {% for holiday in holidays %}
+                                                    {% if holiday.userId==user.id %}
+                                                        <td>{{ holiday.numberOfDaysOff }}</td>
+                                                    {% endif %}
+                                                {% endfor %}
+                                            </tr>
+                                        {% endif %}
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
