--- a/app/Resources/views/user/myTeam.html.twig
+++ b/app/Resources/views/user/myTeam.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout/layout.html.twig' %}
 
 {% block content %}
-    <div id="page-wrapper" style=" min-height: 1043px;" align="center">
+    <div id="page-wrapper" style=" min-height: 1500px;" align="center">
         {% if not is_granted(expression('"ROLE_ADMIN" in roles ')) %}
             <div class="row">
                 <div class="col-lg-12">
@@ -57,43 +57,45 @@
                         </div>
                         <!-- /.panel-body -->
                     </div>
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="fa fa-clock-o fa-fw"></i> Your Days Off
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered table-hover table-striped">
-                                    <thead>
-                                    <tr>
-                                        <th>Type</th>
-                                        <th>DateStart</th>
-                                        <th>DateEnd</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for dayOffFromUser in daysOffFromUser %}
-                                        <tr data-id="{{ dayOffFromUser.id }}">
-                                            <td>{{ dayOffFromUser['type'] }}</td>
-                                            <td>{{ dayOffFromUser['dayStart'] }}</td>
-                                            <td>{{ dayOffFromUser['dayEnd'] }}</td>
-                                            <td>
-                                                <a href="/deleteDayOff/{{ dayOffFromUser.id }}">
-                                                    <i type="button" data-id=""
-                                                       class="btn btn-sm btn-success btn-danger">Delete
-                                                    </i>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    {% endfor %}
-                                    </tbody>
-                                </table>
+                    {% if daysOffFromUser is not empty %}
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <i class="fa fa-clock-o fa-fw"></i> Your Days Off
                             </div>
+                            <!-- /.panel-heading -->
+                            <div class="panel-body">
+                                <div class="table-responsive">
+                                    <table class="table table-bordered table-hover table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th>Type</th>
+                                            <th>DateStart</th>
+                                            <th>DateEnd</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        {% for dayOffFromUser in daysOffFromUser %}
+                                            <tr data-id="{{ dayOffFromUser.id }}">
+                                                <td>{{ dayOffFromUser['type'] }}</td>
+                                                <td>{{ dayOffFromUser['dayStart'] }}</td>
+                                                <td>{{ dayOffFromUser['dayEnd'] }}</td>
+                                                <td>
+                                                    <a href="/deleteDayOff/{{ dayOffFromUser.id }}">
+                                                        <i type="button" data-id=""
+                                                           class="btn btn-sm btn-success btn-danger">Delete
+                                                        </i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!-- /.panel-body -->
                         </div>
-                        <!-- /.panel-body -->
-                    </div>
+                    {% endif %}
                 </div>
                 <!-- /.col-lg-8 -->
                 <div class="col-lg-4">
