--- a/app/Resources/views/vacationDays/blank.html.twig
+++ b/app/Resources/views/vacationDays/blank.html.twig
@@ -7,6 +7,13 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Blank</h1>
+                    <div class="panel-body">
+                        {% for message in app.flashes('warning') %}
+                            <div class="alert alert-warning">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
