--- a/app/Resources/views/admin/addFreeDays.html.twig
+++ b/app/Resources/views/admin/addFreeDays.html.twig
@@ -15,7 +15,7 @@
                 <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
                     <h2>Add Free Days</h2>
                     <hr class="colorgraph">
-                    <form action="{{ path('add_free_days') }}" method="post">
+                    <form action="{{ path('add_free_days') }}" id="form_move_day" method="post">
                         <div class="form-group">
                             <div class='input-group name' id='datetimename' style="width: 455px;">
                                 <input type='text' id="name" class="form-control" name="_name" required
