--- a/app/Resources/views/user/myTeam.html.twig
+++ b/app/Resources/views/user/myTeam.html.twig
@@ -15,6 +15,40 @@
             <div class="panel-heading" style="width: 1100px;">
                 <div id='calendar'></div>
             </div>
+
+            <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                 style="display:none;">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel">Move Free Day</h4>
+                        </div>
+                        <div class="modal-body">
+
+                            <form action='' method="post">
+                                <div class="form-group datetimepicker" style="width: 455px;">
+                                    <div class='input-group date' id='datetimepicker5'>
+                                        <input type='text' id="date" class="form-control" name="_date" required/>
+                                        <span class="input-group-addon">
+                                            <span class="glyphicon glyphicon-calendar"></span>
+                                         </span>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                    <button type="submit" id="save_move_day" class="btn btn-primary">Save changes
+                                    </button>
+                                </div>
+
+                            </form>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
         </div>
         <!-- /.row -->
         {% if is_granted(expression('"ROLE_USER" in roles ')) %}
@@ -152,8 +186,29 @@
             var array = '{{ freeAndDayOff|raw }}';
             var freeDays = '{{ freeDays|raw }}';
             var daysOff = '{{ daysOff|raw }}';
+            var finalPath = '';
 
         </script>
         <script type="text/javascript" src="{{ asset('build/dayOff.js') }}"></script>
+        <script type="text/javascript">
+            var Rules = {
+                paths: {
+                    moveFreeDay: "{{ path('move_free_day', {'id': 'SETID'}) }}",
+
+                }
+            };
+            //document.getElementById("form_move_day").action = finalPath;
+            //$('#save_move_day').click(function () {
+            //document.getElementById("form_move_day").action = finalPath;
+            //                $('#form_move_day').$.ajax({
+            //                    url: finalPath,
+            //                    type: 'GET',
+            //                    dataType: 'json',
+            //                    success: function () {
+            //                    }
+            //                });
+            //});
+        </script>
+
 
     {% endblock %}
