--- a/app/Resources/views/user/myTeam.html.twig
+++ b/app/Resources/views/user/myTeam.html.twig
@@ -27,10 +27,10 @@
                         </div>
                         <div class="modal-body">
 
-                            <form action='' method="post">
+                            <form action="/" method="post">
                                 <div class="form-group datetimepicker" style="width: 455px;">
-                                    <div class='input-group date' id='datetimepicker5'>
-                                        <input type='text' id="date" class="form-control" name="_date" required/>
+                                    <div class='input-group date' id='datetime'>
+                                        <input type='text' id="datepicker" class="form-control" name="_date" required/>
                                         <span class="input-group-addon">
                                             <span class="glyphicon glyphicon-calendar"></span>
                                          </span>
@@ -38,7 +38,8 @@
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                    <button type="submit" id="save_move_day" class="btn btn-primary">Save changes
+                                    <button type="submit" id="modalSaveBtn"
+                                            class="btn btn-primary">Save changes
                                     </button>
                                 </div>
 
@@ -182,32 +183,35 @@
 
     {% block javascripts %}
         {{ parent() }}
-        <script>
+        <script type="text/javascript">
             var array = '{{ freeAndDayOff|raw }}';
             var freeDays = '{{ freeDays|raw }}';
             var daysOff = '{{ daysOff|raw }}';
             var finalPath = '';
-
         </script>
-        <script type="text/javascript" src="{{ asset('build/dayOff.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('build/dayOff.js') }}">
+        </script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script type="text/javascript">
-            var Rules = {
+            var Routes = {
                 paths: {
-                    moveFreeDay: "{{ path('move_free_day', {'id': 'SETID'}) }}",
+                    moveRoute: "{{ path('move_free_day', {'id': 'SETID'}) }}",
 
                 }
             };
-            //document.getElementById("form_move_day").action = finalPath;
-            //$('#save_move_day').click(function () {
-            //document.getElementById("form_move_day").action = finalPath;
-            //                $('#form_move_day').$.ajax({
-            //                    url: finalPath,
-            //                    type: 'GET',
-            //                    dataType: 'json',
-            //                    success: function () {
-            //                    }
-            //                });
-            //});
+            function moveFreeDay(id) {
+                jQuery.ajax({
+                    type: "POST",
+                    url: Routes.paths.moveRoute.replace('SETID', id),
+                    dataType: "json",
+                    data: {value: document.getElementById('datepicker').value},
+                    success: function (data) {
+                        //nu intra aici
+                        console.log(document.getElementById('datepicker').value);
+                    }
+                });
+
+            }
         </script>
 
 
