--- a/app/Resources/views/admin/addFreeDays.html.twig
+++ b/app/Resources/views/admin/addFreeDays.html.twig
@@ -38,33 +38,36 @@
                             </div>
                         </div>
                     </form>
-                    <div class="panel-body">
-                        <div class="table-responsive">
-                            <table class="table table-bordered table-hover table-striped">
-                                <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Date</th>
-                                    <th>Actions</th>
-
-                                </tr>
-                                </thead>
-                                <tbody>
-                                {% for freeDay in freeDaysAll %}
+                    {% if freeDaysAll is not empty %}
+                        <div class="panel-body">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover table-striped">
+                                    <thead>
                                     <tr>
-                                        <td>{{ freeDay['title'] }}</td>
-                                        <td>{{ freeDay['start'] }}</td>
-                                        <td>
-                                            <a href="/deleteFreeDay/{{ freeDay['id'] }}">
-                                                <i type="button" class="btn btn-sm btn-success btn-danger">Delete</i>
-                                            </a>
-                                        </td>
+                                        <th>Name</th>
+                                        <th>Date</th>
+                                        <th>Actions</th>
+
                                     </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
+                                    </thead>
+                                    <tbody>
+                                    {% for freeDay in freeDaysAll %}
+                                        <tr>
+                                            <td>{{ freeDay['title'] }}</td>
+                                            <td>{{ freeDay['start'] }}</td>
+                                            <td>
+                                                <a href="/deleteFreeDay/{{ freeDay['id'] }}">
+                                                    <i type="button"
+                                                       class="btn btn-sm btn-success btn-danger">Delete</i>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
-                    </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
